--- a/CV/Views/Home/MyLife.cshtml
+++ b/CV/Views/Home/MyLife.cshtml
@@ -2,33 +2,29 @@
 <link rel="stylesheet" href="~/Content/xmylife.css">
 <script src="/Scripts/mylife.js"></script>
 
-<div id="MyLife" class="section-margin">
+<div id="MyLife" class="">
 
-    <h1 class="title is-1 has-bottom-border"> These are the days of my life </h1>
+    <h1 class="title is-1-mobile has-bottom-border"> These are the days of my life </h1>
     <div class="timeline is-centered">
-        <header class="timeline-header">
-            <span class="tag is-large is-dark">Start</span>
-        </header>
-
         <timeline-item title="1988" subtitle="Born in Cebu, Philippines where seashells are used for currency"></timeline-item>
         <div class="timeline-item is-hidden"></div>
-        <timeline-content image="littleme.jpg" description="Naww look at me! So noob at life. I still kind of am I guess"></timeline-content>
+        <timeline-content image="littleme.jpg" description="Naww look at me! So noob at life. <p> I still kind of am I guess </p>"></timeline-content>
 
         <timeline-item title="2002" subtitle="Immigrated to New Zealand with my family"></timeline-item>
         <div class="timeline-item is-hidden"></div>
-        <timeline-content image="family.jpg" description="Like fish out water. We had a stack of nerves and a whole lot of determination."></timeline-content>
+        <timeline-content image="family.jpg" description="Like fish out water. We had a stack of nerves and a whole lot of determination"></timeline-content>
 
         <timeline-item title="2007" subtitle="University [yoo-nuh-vur-si-tee]"></timeline-item>
         <div class="timeline-item is-hidden"></div>
-        <timeline-content image="dancinguni1.jpg" description="I tended to dance more than attend classes during my Uni days. I have matured a lot since then."></timeline-content>
+        <timeline-content image="dancinguni1.jpg" description="I tended to dance more than attend classes during my Uni days. <p> I have matured a lot since then </p>"></timeline-content>
 
         <timeline-item title="2011" subtitle="Qualified! Got my license to work, pretended I knew what I was doing and got a job"></timeline-item>
         <div class="timeline-item is-hidden"></div>
-        <timeline-content image="grad.jpg" description="No idea who these people are. Found them walking close to me so I took a photo with them."></timeline-content>
+        <timeline-content image="grad.jpg" description="No idea who these people are. Found them walking close to me so I took a photo with them"></timeline-content>
 
         <timeline-item title="2014" subtitle="Married my biggest and greatest fan"></timeline-item>
         <div class="timeline-item is-hidden"></div>
-        <timeline-content image="wedding1.jpg" description="My ball and chain (just jokes Amelia). In all honesty, she has been the making of me…"></timeline-content>
+        <timeline-content image="wedding1.jpg" description="My ball and chain (just jokes Amelia). In all honesty, she has been the making of me"></timeline-content>
 
         <timeline-item title="2015" subtitle="Visited 38,272,037 ancient churches during a three month excursion in Europe"></timeline-item>
         <div class="timeline-item is-hidden"></div>
@@ -36,10 +32,7 @@
 
         <timeline-item title="2018" subtitle="Spawned a poop machine"></timeline-item>
         <div class="timeline-item is-hidden"></div>
-        <timeline-content image="rt.jpg" description="Light of my life, apple of my eye."></timeline-content>
-        <header class="timeline-header">
-            <span class="tag is-large is-dark">Still going...</span>
-        </header>
+        <timeline-content image="rt.jpg" description="Light of my life, apple of my eye"></timeline-content>
     </div>
     @*<div class="sub-section-margin has-text-centered">
         <a class="subtitle button is-large button-animation" v-on:click="Back">
