--- a/CV/Views/Project/CRM.cshtml
+++ b/CV/Views/Project/CRM.cshtml
@@ -1,16 +1,16 @@
-﻿<div class="hero">
-    <div class="section-margin">
+﻿<div class="hero has-bottom-border">
+    <div class="hero-body">
         <div class="columns">
-            <div class="column">
-                <div class="image is-128x128 auto-margin">
+            <div class="column auto-margin">
+                <div class="image is-256x256 auto-margin  is-vertical-center">
                     <img class="" src="~/Content/img/crm.png" />
                 </div>
                 <div class="has-text-centered">
                     <span class="tag">.NET MVC</span>
                     <span class="tag">Bootstrap</span>
                     <span class="tag">SQL</span>
-
                 </div>
+
             </div>
             <div class="column auto-margin">
                 <div class="section has-text-justified">
@@ -22,10 +22,10 @@
     </div>
 </div>
 
-<div class="section-margin">
+<div class="content sub-section-margin">
     <div class="box">
         <h3 class="title is-3 has-bottom-border">Problem</h3>
-        <p> ITC, my previous employer had an internal CRM system written in Delphi as a desktop application. This was problematic due to compatibility issues with running the application on different platforms. </p>
+        <p> ITC, my previous employer had an internal CRM desktop application written in Delphi. This was problematic due to compatibility issues with running the application on different platforms. </p>
     </div>
 
     <div class="box is-shadowless is-transparent has-text-centered">
@@ -44,42 +44,17 @@
     <div class="box">
         <h3 class="title is-3 has-bottom-border">What I learned</h3>
         <div class="content">
-            <h6 class="title is-6">Digging deep with Xamarin.Forms </h6>
+            <h6 class="title is-6"> HTML, Bootstrap, Razor, SQL, .NET</h6>
             <p>
-                One of the biggest reason for creating this mobile app was to enhance my understanding further about Xamarin.Forms. I was in the middle of completing a Xamarin.Forms projects and I wanted to learn more about it to enhance my understanding.
-                Building this app definitely served that purpose and I was able to
+                This was my first project (outside of university) where I had to delve into programming and this was a great introductory course for my learning. I already knew a fair bit
+                about HTML and CSS but being able to use a popular library like bootstrap was quite eye-opening. It also allowed me to understand how information from sources like a relational
+                database is presented to a user, which in this case uses MVC's Razor View. 
+            </p>
+            <p>
+                Overall, this project was an introductory course on these technologies but on top of all the technologies, the main takeaway from this project was learning about the different architecural pattern
+                that MVC offered and what other patterns exist out there.
             </p>
         </div>
-
-        <div class="content">
-            <h6 class="title is-6">Getting my feet wet with .NET Web API from scratch</h6>
-            <p>
-                This was a really good way of getting myself more familiar on how .NET Web API works from scratch. It was good to see its functionality and potential in comparison to .NET MVC 5.
-            </p>
-        </div>
-
-        <div class="content">
-            <h6 class="title is-6">Scope creep is a real thing</h6>
-            <p>
-                The original purpose of this project was quite basic - find out who has paid for the casual sessions and calculate the total amount for permanent players at the end of the term.
-                Realistically, I could have just created an Excel spreadsheet and it would have been done in a couple of hours. But where's the fun in that?
-            </p>
-
-            <p>
-                I started thinking it would be nice to record the attendances so I implemented an attendance module. Then I started to think about how it would be cool to have the application automatically send out notifications to players. And then I got into thinking how it would be cool to integrate my other personal ideas into this app etc. etc. etc.
-                I then realised that this is what they talk about when they say scope creep. Unfortunately, I didn't get to utilise my app since I stopped basketball altogether. I have every intention on finishing it.
-            </p>
-
-        </div>
-
-
-    </div>
-
-    <div class="has-text-centered">
-        <a class="button">
-            <span class="icon"><i class="fab fa-github"></i></span>
-            <span>View on GitHub</span>
-        </a>
     </div>
 </div>
 
