--- a/CV/Views/Project/MT4.cshtml
+++ b/CV/Views/Project/MT4.cshtml
@@ -11,10 +11,9 @@
             </div>
 
         </div>*@
-        <div class="section-margin">
             <div class="columns">
-                <div class="column">
-                    <div class="image is-128x128 auto-margin">
+                <div class="column auto-margin">
+                    <div class="image is-256x256 auto-margin is-vertical-center">
                         <img class="" src="~/Content/img/soonsoon.png"/>
                     </div>
                     <div class="has-text-centered">
@@ -22,6 +21,7 @@
                         <span class="tag">.NET Web API</span>
                         <span class="tag">MQL (MT4 language)</span>
                     </div>
+
                 </div>
                 <div class="column auto-margin">
                     <div class="section has-text-justified content">
@@ -32,7 +32,6 @@
 
                 </div>
             </div>
-        </div>
         
 
         @*<div class="columns">
@@ -54,8 +53,8 @@
     </div>
 </div>
 
-<div class="section-margin">
-    <div class="box content">
+<div class="content sub-section-margin">
+    <div class="box">
         <p class="title has-bottom-border">Problem</p>
         <p>
             Successful Forex trading comes down to recognising patterns and making trades at the correct time before they change. This is not only time consuming, but could potentially result in lost opportunities.
@@ -66,7 +65,7 @@
         <i class="fas fa-arrow-alt-circle-down has-mt4-color is-size-3"></i>
     </div>
 
-    <div class="box content">
+    <div class="box">
         <p class="title has-bottom-border">Solution</p>
         <p> Build an automated trading robot using the MT4 platform.  </p>
         <p> In addition to the trading robot, we needed to be able to backtest the algorithm with real historical data. This is part of the project is currently in progress.  </p>
