--- a/CV/Views/Project/NFTB.cshtml
+++ b/CV/Views/Project/NFTB.cshtml
@@ -1,20 +1,23 @@
-﻿<div class="hero is-small has-bottom-border">
+﻿<div class="hero has-bottom-border">
     @*<div class="image is-128x128 is-div-centered level-item">
         <img class="" src="~/Content/img/NFTB.png" />
     </div>
     <div class="has-text-centered">
         NFTB - 2018
     </div>*@
-    <div class="section-margin">
+    <div class="hero-body">
         <div class="columns">
-            <div class="column">
-                <div class="image is-128x128 auto-margin">
+            <div class="column auto-margin">
+                <div class="image is-256x256 auto-margin is-vertical-center">
                     <img class="" src="~/Content/img/NFTB.png"/>
+
                 </div>
                 <div class="has-text-centered">
                     <span class="tag">.NET Web API</span>
                     <span class="tag">Xamarin.Forms</span>
                 </div>
+
+
             </div>
             <div class="column auto-margin">
                 <div class="section has-text-justified content">
@@ -34,8 +37,8 @@
 
 </div>
 
-<div class="section-margin">
-    <div class="box content">
+<div class="content sub-section-margin">
+    <div class="box">
         <h3 class="title is-3 has-bottom-border">Problem</h3>
         <p>
             There were two types of players; permanent and casual.  
@@ -52,7 +55,7 @@
         <i class="fas fa-arrow-alt-circle-down has-nftb-color is-size-3"></i>
     </div>
     
-    <div class="box content">
+    <div class="box">
         <h3 class="title is-3 has-bottom-border">Solution</h3>
         <p> Create a mobile app using Xamarin, an automatic calculator, that keeps a record of who owes money, and how much each permanent player needs to pay at the end of the term. </p>
     </div>
@@ -61,7 +64,7 @@
         <i class="fas fa-arrow-alt-circle-down has-nftb-color is-size-3"></i>
     </div>
 
-    <div class="box content">
+    <div class="box">
         <h3 class="title is-3 has-bottom-border">What I learned</h3>
         <div class="content">
             <h6 class="title is-6">Xamarin.Forms </h6>
