--- a/CV/Views/Project/ThisProject.cshtml
+++ b/CV/Views/Project/ThisProject.cshtml
@@ -1,22 +1,22 @@
-﻿<div class="hero is-small has-bottom-border is-project">
+﻿<div class="hero has-bottom-border">
     @*<div class="image is-128x128 is-div-centered level-item">
             <img class="" src="~/Content/img/NFTB.png" />
         </div>
         <div class="has-text-centered">
             NFTB - 2018
         </div>*@
-    <div class="section-margin">
+    <div class="hero-body">
         <div class="columns">
-            <div class="column">
-                <div class="image is-128x128 auto-margin">
+            <div class="column auto-margin">
+                <div class="image is-256x256 auto-margin  is-vertical-center">
                     <img class="" src="~/Content/img/thisProject.png" />
                 </div>
                 <div class="has-text-centered">
                     <span class="tag">.NET MVC</span>
                     <span class="tag">Bulma CSS</span>
                     <span class="tag">VueJS</span>
-
                 </div>
+
             </div>
             <div class="column auto-margin">
                 <div class="section has-text-justified content">
@@ -29,8 +29,8 @@
 
 </div>
 
-<div class="section-margin">
-    <div class="box section">
+<div class="content sub-section-margin">
+    <div class="box">
         <h3 class="title is-3 has-bottom-border">Problem</h3>
         <p>
             Before I found my current job, I had difficulty finding a job for several reasons (I think these were the reasons):
@@ -46,7 +46,7 @@
         <i class="fas fa-arrow-alt-circle-down has-thisproject-color is-size-3"></i>
     </div>
 
-    <div class="box section">
+    <div class="box">
         <h3 class="title is-3 has-bottom-border">Solution</h3>
         <p> I need to stand out enough to get YOUR attention. This site was a good way for me to show who I am (because that is more important than skills) without having a 3 page long CV.  </p>
         <p> This site is also my sandpit to be able to play around with technologies that I want to play with. I can use this site as a template for future projects that require similar technologies.  </p>
@@ -57,7 +57,7 @@
         <i class="fas fa-arrow-alt-circle-down has-thisproject-color is-size-3"></i>
     </div>
 
-    <div class="box section">
+    <div class="box">
         <h3 class="title is-3 has-bottom-border">What I learned</h3>
         <div class="content">
             <h6 class="title is-6">Understanding what's under the hood is a good way to learn... at a certain point</h6>
